--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.22",
+    "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@types/node": "^24.6.0",
+    "@types/node": "^24.10.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/compiler-sfc": "^3.5.24",
     "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.22",
+    "daisyui": "^5.5.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.13",
     "typescript": "~5.9.3",
     "vite": "^7.1.7",
     "vue-tsc": "^3.1.0"
